updated documentation, minor logging changes